--- a/api/profile/models/Profile.settings.json
+++ b/api/profile/models/Profile.settings.json
@@ -1,6 +1,6 @@
 {
   "connection": "default",
-  "collectionName": "profile",
+  "collectionName": "",
   "info": {
     "name": "profile",
     "description": ""
@@ -11,13 +11,11 @@
   "attributes": {
     "firstname": {
       "default": "",
-      "type": "string",
-      "required": true
+      "type": "string"
     },
     "lastname": {
       "default": "",
-      "type": "string",
-      "required": true
+      "type": "string"
     },
     "bio": {
       "default": "",
