--- a/admin/package.json
+++ b/admin/package.json
@@ -1,27 +1,27 @@
 {
-  "_from": "strapi-admin@3.0.0-alpha.15",
-  "_id": "strapi-admin@3.0.0-alpha.15",
+  "_from": "strapi-admin@3.0.0-alpha.18",
+  "_id": "strapi-admin@3.0.0-alpha.18",
   "_inBundle": false,
-  "_integrity": "sha512-P6TCAkFtcvCjCREj7EnwE3VDt3NXr+VyZNzpULzuh2MxsGQkwaRo7b8zFnsK1JphjYurpKqSv/DGcaI3SkUSPg==",
+  "_integrity": "sha512-i495RMt2oWX2pvmuSvQ+Ath4eJFxCysx38bqYJqhuMqjLo126ZHUjOReacxiI40//SSXnbrom8aAxUubNEIBFg==",
   "_location": "/strapi/strapi-admin",
   "_phantomChildren": {},
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "strapi-admin@3.0.0-alpha.15",
+    "raw": "strapi-admin@3.0.0-alpha.18",
     "name": "strapi-admin",
     "escapedName": "strapi-admin",
-    "rawSpec": "3.0.0-alpha.15",
+    "rawSpec": "3.0.0-alpha.18",
     "saveSpec": null,
-    "fetchSpec": "3.0.0-alpha.15"
+    "fetchSpec": "3.0.0-alpha.18"
   },
   "_requiredBy": [
     "/strapi/strapi-generate-admin"
   ],
-  "_resolved": "https://registry.npmjs.org/strapi-admin/-/strapi-admin-3.0.0-alpha.15.tgz",
-  "_shasum": "0583a3a8ac1dfcb7c3ef948a40f65c1e815fc3ac",
-  "_spec": "strapi-admin@3.0.0-alpha.15",
-  "_where": "/Users/dorelljames/.nvm/versions/node/v8.12.0/lib/node_modules/strapi/node_modules/strapi-generate-admin",
+  "_resolved": "https://registry.npmjs.org/strapi-admin/-/strapi-admin-3.0.0-alpha.18.tgz",
+  "_shasum": "d71940e8e44c8c5b1fdc74da1ff2309bb0109984",
+  "_spec": "strapi-admin@3.0.0-alpha.18",
+  "_where": "/Users/allen/.nvm/versions/node/v10.15.0/lib/node_modules/strapi/node_modules/strapi-generate-admin",
   "author": {
     "name": "Strapi"
   },
@@ -38,12 +38,12 @@
   "description": "Strapi Admin",
   "devDependencies": {
     "sanitize.css": "^4.1.0",
-    "strapi-helper-plugin": "3.0.0-alpha.15",
-    "strapi-utils": "3.0.0-alpha.15"
+    "strapi-helper-plugin": "3.0.0-alpha.18",
+    "strapi-utils": "3.0.0-alpha.18"
   },
   "engines": {
-    "node": ">= 9.0.0",
-    "npm": ">= 5.0.0"
+    "node": ">= 10.0.0",
+    "npm": ">= 6.0.0"
   },
   "homepage": "https://github.com/strapi/strapi-admin#readme",
   "license": "MIT",
@@ -75,15 +75,5 @@
     "start": "node ./node_modules/strapi-helper-plugin/node_modules/.bin/cross-env NODE_ENV=development PORT=4000 IS_ADMIN=true node ./node_modules/strapi-helper-plugin/lib/server",
     "test": "echo \"Error: no test specified\""
   },
-  "version": "3.0.0-alpha.15",
-  "warnings": [
-    {
-      "code": "ENOTSUP",
-      "required": {
-        "node": ">= 9.0.0",
-        "npm": ">= 5.0.0"
-      },
-      "pkgid": "strapi-admin@3.0.0-alpha.15"
-    }
-  ]
+  "version": "3.0.0-alpha.18"
 }
