--- a/api/category/models/Category.settings.json
+++ b/api/category/models/Category.settings.json
@@ -1,6 +1,6 @@
 {
   "connection": "default",
-  "collectionName": "category",
+  "collectionName": "",
   "info": {
     "name": "category",
     "description": ""
@@ -11,9 +11,7 @@
   "attributes": {
     "name": {
       "default": "",
-      "type": "string",
-      "required": true,
-      "unique": true
+      "type": "string"
     },
     "description": {
       "default": "",
