--- a/plugins/content-manager/package.json
+++ b/plugins/content-manager/package.json
@@ -1,27 +1,27 @@
 {
-  "_from": "strapi-plugin-content-manager@3.0.0-alpha.15",
-  "_id": "strapi-plugin-content-manager@3.0.0-alpha.15",
+  "_from": "strapi-plugin-content-manager@3.0.0-alpha.18",
+  "_id": "strapi-plugin-content-manager@3.0.0-alpha.18",
   "_inBundle": false,
-  "_integrity": "sha512-+peOGr8llK24TWQxxPVIQ6LwapHmlVveOObaSjD1OZbhIe/kEsnamPKIXcaiH2qaxZU24un3JrfaZX7K9rXoIw==",
+  "_integrity": "sha512-7ZqOyJ2goZwedncJDUI08rh9bRkQdbWeKXn7l6DPE6YoZyOFbcgp8uOGGIJ3+C6EQ6GV2yi3jgJJvZlRZvoUPA==",
   "_location": "/strapi-plugin-content-manager",
   "_phantomChildren": {},
   "_requested": {
     "type": "version",
     "registry": true,
-    "raw": "strapi-plugin-content-manager@3.0.0-alpha.15",
+    "raw": "strapi-plugin-content-manager@3.0.0-alpha.18",
     "name": "strapi-plugin-content-manager",
     "escapedName": "strapi-plugin-content-manager",
-    "rawSpec": "3.0.0-alpha.15",
+    "rawSpec": "3.0.0-alpha.18",
     "saveSpec": null,
-    "fetchSpec": "3.0.0-alpha.15"
+    "fetchSpec": "3.0.0-alpha.18"
   },
   "_requiredBy": [
     "#USER"
   ],
-  "_resolved": "https://registry.npmjs.org/strapi-plugin-content-manager/-/strapi-plugin-content-manager-3.0.0-alpha.15.tgz",
-  "_shasum": "6ee0f5591832ebdd6b1841999eaeb19c13ee57f7",
-  "_spec": "strapi-plugin-content-manager@3.0.0-alpha.15",
-  "_where": "/Users/dorelljames/Projects/code/webriq-strapi-blog-starter/myNewProject",
+  "_resolved": "https://registry.npmjs.org/strapi-plugin-content-manager/-/strapi-plugin-content-manager-3.0.0-alpha.18.tgz",
+  "_shasum": "abe89dbb4e37bab759e27946988a1ed5b019d533",
+  "_spec": "strapi-plugin-content-manager@3.0.0-alpha.18",
+  "_where": "/Users/allen/Projects/htdocs/webriq-strapialpha18-blog-starter",
   "author": {
     "name": "Strapi team",
     "email": "hi@strapi.io",
@@ -41,11 +41,11 @@
     "draft-js": "^0.10.5",
     "react-select": "^1.2.1",
     "showdown": "^1.8.6",
-    "strapi-helper-plugin": "3.0.0-alpha.15"
+    "strapi-helper-plugin": "3.0.0-alpha.18"
   },
   "engines": {
-    "node": ">= 9.0.0",
-    "npm": ">= 5.0.0"
+    "node": ">= 10.0.0",
+    "npm": ">= 6.0.0"
   },
   "homepage": "https://github.com/strapi/strapi#readme",
   "license": "MIT",
@@ -80,23 +80,5 @@
     "icon": "plug",
     "description": "content-manager.plugin.description"
   },
-  "version": "3.0.0-alpha.15",
-  "warnings": [
-    {
-      "code": "ENOTSUP",
-      "required": {
-        "node": ">= 9.0.0",
-        "npm": ">= 5.0.0"
-      },
-      "pkgid": "strapi-plugin-content-manager@3.0.0-alpha.15"
-    },
-    {
-      "code": "ENOTSUP",
-      "required": {
-        "node": ">= 9.0.0",
-        "npm": ">= 5.0.0"
-      },
-      "pkgid": "strapi-plugin-content-manager@3.0.0-alpha.15"
-    }
-  ]
+  "version": "3.0.0-alpha.18"
 }
