--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
     "request": "^2.88.0",
-    "strapi": "3.0.0-alpha.18",
+    "strapi": "^3.0.0-alpha.19",
     "strapi-hook-mongoose": "3.0.0-alpha.18",
-    "strapi-upload-cloudinary": "^3.0.0-alpha.12"
+    "strapi-provider-upload-cloudinary": "^3.0.0-alpha.15"
   },
   "author": {
     "name": "allen",
