--- a/api/profile/models/Profile.settings.json
+++ b/api/profile/models/Profile.settings.json
@@ -1,6 +1,6 @@
 {
   "connection": "default",
-  "collectionName": "",
+  "collectionName": "profile",
   "info": {
     "name": "profile",
     "description": ""
