--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
     "babel-eslint": "^7.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^13.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-react": "^7.7.0"
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-react": "^7.17.0"
   },
   "dependencies": {
-    "axios": "^0.18.0",
-    "lodash": "^4.17.5",
+    "axios": "^0.18.1",
+    "lodash": "^4.17.15",
     "strapi": "3.0.0-alpha.26.2",
     "strapi-hook-mongoose": "3.0.0-alpha.26.2",
-    "strapi-provider-upload-cloudinary": "^3.0.0-alpha.15",
+    "strapi-provider-upload-cloudinary": "^3.0.0-beta.17.8",
     "strapi-utils": "3.0.0-alpha.26.2"
   },
   "author": {
